--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-darwin-arm64": "^4.32.0",
+		"@rollup/rollup-darwin-x64": "^4.32.0",
+		"@rollup/rollup-linux-arm64-gnu": "^4.32.0",
+		"@rollup/rollup-linux-x64-gnu": "^4.32.0",
+		"@rollup/rollup-win32-arm64-msvc": "^4.32.0",
+		"@rollup/rollup-win32-x64-msvc": "^4.32.0"
 	}
 }
