--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
-		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/vite": "^4.0.0",
+		"@tailwindcss/vite": "^4.1.8",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -30,7 +29,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
+		"tailwindcss": "^4.1.8",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6"
@@ -41,6 +40,7 @@
 		"@rollup/rollup-linux-arm64-gnu": "^4.32.0",
 		"@rollup/rollup-linux-x64-gnu": "^4.32.0",
 		"@rollup/rollup-win32-arm64-msvc": "^4.32.0",
-		"@rollup/rollup-win32-x64-msvc": "^4.32.0"
+		"@rollup/rollup-win32-x64-msvc": "^4.32.0",
+		"@rollup/rollup-linux-x64-musl": "^4.32.0"
 	}
 }
